[tool.poetry]
name = "miqro-rutos-sms"
version = "0.1.1"
description = ""
authors = ["Daniel Fett <fett@danielfett.de>"]
readme = "README.md"
packages = [{include = "miqro_rutos_sms"}]

[tool.poetry.dependencies]
python = "^3.7"
miqro = "^1.2.0"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
miqro_rutos_sms = { callable = "miqro_rutos_sms:service.run" }
